// This material is the exclusive property of KUKA.
// Except as expressly permitted by separate agreement, this material
// may only be used by members of the development department of KUKA
// for internal development purposes of KUKA.
//
// Copyright (C) KUKA. All Rights Reserved.

syntax = "proto3";

package kuka.ecs.v1;

import "iiqka/proto-api/motion-services-ecs/external_header.proto";
import "iiqka/proto-api/motion-external/motion_state_internal.proto";


option csharp_namespace = "Kuka.Ecs.V1";


// External motion state
message MotionStateExternal {
  // Header containing ID and checksum
  ExternalHeader header = 1;
  // The measured joint position of the current cycle
  kuka.motion.external.MotionStateInternal motion_state = 2;
  // IO handling
  // repeated IOValue io_values = 4;
}
